<resources>
    <string name="app_name">CineFlick</string>
    <string name="action_settings">Settings</string>
    <string name="toggle_rating">Ratings/Popularity</string>
    <string name="ratings_settings">Ratings</string>
    <string name="network_not_availbale">Network is not available</string>
    <string name="network_availbale">Network is available</string>
    <string name="error">Error</string>
    <string name="error_closing_stream">Error closing stream</string>
    <string name="in_post_execute">In post Execute</string>
    <string name="input_stream_null">Input stream is null</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="title_activity_detailed_movie_info">DetailedMovieInfo</string>
    <string name="array_list_null">array list is null</string>
    <string name="array_list_not_null">array list is not null</string>
    <string name="array_list_not_null_size">"array list is not null and its size is "</string>
    <string name="bundle_not_null">intent bundle is not null</string>
    <string name="bundle_not_null_detail_activity">intent bundle is not null in activity</string>
    <string name="bundle_null_detail_activity">intent bundle is null in activity</string>
    <string name="times">"no of times its count "</string>
    <string name="convertView_called">"No of time convertView called "</string>
    <string name="convert_View_Called">"no of times convertView not called "</string>
    <string name="description">Description</string>
    <string name="ratings">Ratings</string>
    <string name="release">Release</string>
    <string name="movie">Movie</string>
    <string name="was_in_popularity">I was in popularity</string>
    <string name="was_in_rating">I was in rating</string>
    <string name="check_for_ratings">Check For Ratings</string>
    <string name="display_acc_ratings">Movies will be displayed acc to ratings</string>
    <string name="settings">Settings</string>
    <string name="pref_sync" translatable="false">pref_sync</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="something">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_wifi_message">Don\'t have WiFi Connection!! Using Mobile network may cost you more!</string>
    <string name="wifi_not_avail">WiFi Not Available</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="wifi_dialog">WiFiDiaglog</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="review_not_available">"Review is not available "</string>
    <string name="video_not_available">Video is not available</string>

</resources>
