<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.DetailedMovieInfoFragment"
    tools:showIn="@layout/activity_detailed_movie_info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imagePoster"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movieNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/movieName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/releaseDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/ratingsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ratings"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/ratings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ToggleButton
                        android:id="@+id/toggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="favoriteChanged"
                        android:text="@string/yes" />
                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/trailer_button"
                android:text="@string/trailer"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/review_button"
                android:text="@string/reviews"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descriptionsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/descriptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
